--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500&display=swap"
       rel="stylesheet"
     />
-    <title>Calculadora de tasas</title>
+    <title>Calculadora de Tasas</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
